kubernetes/clusters/home/oci/packages/cloudflared/ingress-capacitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
spec:
  rules:
    - host: capacitor.andrewlee.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
